--- a/Netch/Forms/MainWindow.xaml
+++ b/Netch/Forms/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Netch.Forms"
         mc:Ignorable="d"
-        Title="Netch" Height="450" Width="800">
+        Title="NetchTest" Height="450" Width="800">
     <Grid>
         
     </Grid>
